--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,12 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es2017",
+		"allowJs": true,
+		"noImplicitAny": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true
+		"noUnusedParameters": true,
+		"typeRoots": [
+			"node_modules/@types"
+		]
 	}
 }
