--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ts-node": "^3.0.4",
     "tslint": "^5.2.0",
     "tslint-config-airbnb": "^5.0.1",
-    "tsutils": "^1.9.1",
+    "tsutils": "=1.6.0",
     "typescript": "^2.3.2",
     "webpack": "^2.5.1"
   }
