--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,26 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
+		"moduleResolution": "classic",
 		"target": "es2017",
 		"allowJs": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"typeRoots": [
 			"node_modules/@types"
-		]
-	}
+		],
+		"baseUrl": ".",
+		"paths": {
+			"*": [
+				"*"
+			],
+			"#/*": [
+				"./*"
+			]
+		}
+	},
+	"exclude": [
+		"lib",
+		"node_modules"
+	]
 }
