--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A base package from which other packages can be derived",
   "main": "lib/index.js",
   "scripts": {
+    "build": "webpack",
+    "lint": "tslint {./,src/**/,task/**/,test/**/}*.ts --type-check --project ./tsconfig.json",
+    "prepublish": "npm run lint && npm test && npm run build",
     "start": "ts-node -r module-alias/register src/index.ts",
     "start:build": "node lib/index.js",
-    "build": "webpack",
-    "prepublish": "npm test && npm run build",
     "test": "mocha --compilers ts:ts-node/register -r module-alias/register test/index.test.ts"
   },
   "repository": {
