Add typeings for webpack and webpack module env

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/chai": "^3.5.2",
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.18",
+    "@types/webpack": "^2.2.15",
+    "@types/webpack-env": "^1.13.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
