Update the project's configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-# OS specific files.
-.DS_Store
-Thumbs.db
+# Build generated files.
+build/*
+
+# Compile generated files.
+.awcache/*
 
 # NPM generated files.
 node_modules/*
 npm-debug.log*
 
-# Build generated files.
+# Published files.
 lib/*
+
+# OS specific files.
+.DS_Store
+Thumbs.db
