--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "npm": "~3.10.10"
   },
   "scripts": {
-    "preversion": "npm run lint && npm test && npm run build && npm run task:git:merge_into_master",
+    "preversion": "npm run lint && npm run build && npm test && publish:copy_to_lib && npm run publish:merge_repo_to_master",
     "postversion": "git push && git push --tags",
-    "build": "webpack",
-    "lint": "tslint {./,src/**/,task/**/,test/**/}*.ts --type-check --project ./tsconfig.json",
-    "start": "ts-node -r module-alias/register src/index.ts",
-    "start:build": "node lib/index.js",
-    "task": "ts-node -r module-alias/register task/index.ts",
-    "task:git:merge_into_master": "npm run task -- git/merge_into_master",
-    "test": "mocha --compilers ts:ts-node/register -r module-alias/register test/index.test.ts"
+    "build": "npm run build:lib && npm run build:test",
+    "build:lib": "webpack --config webpack/lib.ts",
+    "build:lib:watch": "npm run build:lib -- --watch",
+    "build:test": "webpack --config webpack/test.ts",
+    "build:test:watch": "npm run build:test -- --watch",
+    "lint": "tslint {./,src/**/,task/**/,test/**/,webpack/**/}*.ts --type-check --project ./tsconfig.json",
+    "lint:watch": "chokidar src/**/*.ts task/**/*.ts test/**/*.ts webpack/**/*.ts -c \"npm run lint\" --initial --silent",
+    "publish:copy_to_lib": "mkdirp lib && cp build/types/src/index.d.ts lib/ && cp build/lib/* lib/",
+    "publish:merge_repo_to_master": "npm run ts-node task/publish/merge_repo_to_master.ts",
+    "test": "mocha -c --full-trace --no-exit --no-timeouts test/index.test.ts",
+    "test:watch": "npm run start:test -- -w",
+    "ts-node": "ts-node -O \"{\\\"target\\\":\\\"es2015\\\"}\" -r module-alias/register"
   },
   "repository": {
     "type": "git",
@@ -32,26 +37,33 @@
   },
   "homepage": "https://github.com/Player1os/node-js-package#readme",
   "devDependencies": {
+    "@types/bluebird-global": "^3.5.2",
     "@types/chai": "^3.5.2",
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.18",
     "@types/webpack": "^2.2.15",
     "@types/webpack-env": "^1.13.0",
+    "awesome-typescript-loader": "^3.1.3",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "chai": "^3.5.0",
+    "chokidar": "^1.7.0",
+    "git-rev": "^0.2.1",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.4.1",
     "module-alias": "^2.0.0",
-    "ts-loader": "^2.0.3",
+    "spawn-process-promise": "^1.0.2",
     "ts-node": "^3.0.4",
     "tslint": "^5.2.0",
     "tslint-config-airbnb": "^5.0.1",
     "tsutils": "=1.6.0",
     "typescript": "^2.3.2",
+    "uglify-js": "^3.0.10",
     "webpack": "^2.5.1"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.0"
   },
   "_moduleAliases": {
     "#": "."
