--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
+	"awesomeTypescriptLoaderOptions": {
+		"useBabel": true,
+		"useCache": true
+	},
 	"compilerOptions": {
+		"baseUrl": ".",
+		"declaration": true,
+		"declarationDir": "build/types",
 		"module": "commonjs",
-		"target": "es2017",
-		"allowJs": true,
 		"noImplicitAny": false,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"typeRoots": [
-			"node_modules/@types"
-		],
-		"baseUrl": ".",
 		"paths": {
 			"*": [
 				"*"
@@ -17,9 +18,20 @@
 			"#/*": [
 				"./*"
 			]
-		}
+		},
+		"sourceMap": true,
+		"target": "es2017",
+		"typeRoots": [
+			"node_modules/@types"
+		]
 	},
+	"include": [
+		"src/**/*.ts",
+		"test/**/*.ts",
+		"task/**/*.ts"
+	],
 	"exclude": [
+		"build",
 		"lib",
 		"node_modules"
 	]
