Add types entry to point to the library interface type definitions

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A base package from which other packages can be derived",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "engines": {
     "node": "~6.9.3",
     "npm": "~3.10.10"
@@ -19,7 +20,7 @@
     "lint:watch": "chokidar src/**/*.ts task/**/*.ts test/**/*.ts webpack/**/*.ts -c \"npm run lint\" --initial --silent",
     "publish:copy_to_lib": "mkdirp lib && cp build/types/src/index.d.ts lib/ && cp build/lib/* lib/",
     "publish:merge_repo_to_master": "npm run ts-node task/publish/merge_repo_to_master.ts",
-    "test": "mocha -c --full-trace --no-exit --no-timeouts test/index.test.ts",
+    "test": "mocha -c --full-trace --no-exit --no-timeouts build/test/index.test.js",
     "test:watch": "npm run start:test -- -w",
     "ts-node": "ts-node -O \"{\\\"target\\\":\\\"es2015\\\"}\" -r module-alias/register"
   },
