--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{**/.babelrc**/*.json,}]
+[{**/.babelrc,**/*.json}]
 indent_size = 2
 
 [{build/**/*,lib/**/*,node_modules/**/*,package.json}]
