--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "publish:copy_to_lib": "mkdirp lib && cp build/types/src/index.d.ts lib/ && cp build/lib/* lib/",
     "publish:merge_repo_to_master": "npm run ts-node task/publish/merge_repo_to_master.ts",
     "test": "mocha -c --full-trace --no-exit --no-timeouts build/test/index.test.js",
-    "test:watch": "npm run start:test -- -w",
+    "test:watch": "npm test -- -w",
     "ts-node": "ts-node -O \"{\\\"target\\\":\\\"es2015\\\"}\" -r module-alias/register"
   },
   "repository": {
@@ -45,7 +45,6 @@
     "@types/webpack": "^2.2.15",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.3",
-    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "bluebird": "^3.5.0",
