--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "package",
+  "name": "library",
   "version": "1.0.0",
-  "description": "A base package from which other packages can be derived",
+  "description": "A base library from which other library can be derived",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "engines": {
@@ -19,24 +19,24 @@
     "lint": "tslint {./,src/**/,task/**/,test/**/,webpack/**/}*.ts --type-check --project ./tsconfig.json",
     "lint:watch": "chokidar src/**/*.ts task/**/*.ts test/**/*.ts webpack/**/*.ts -c \"npm run lint\" --initial --silent",
     "publish:copy_to_lib": "mkdirp lib && cp build/types/src/index.d.ts lib/ && cp build/lib/* lib/",
-    "publish:merge_repo_to_master": "npm run ts-node task/publish/merge_repo_to_master.ts",
+    "publish:merge_repo_to_master": "npm run ts-node task/publish-merge_repo_to_master.ts",
     "test": "mocha -c --full-trace --no-exit --no-timeouts build/test/index.test.js",
     "test:watch": "npm test -- -w",
     "ts-node": "ts-node -O \"{\\\"target\\\":\\\"es2015\\\"}\" -r module-alias/register"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Player1os/node-js-package.git"
+    "url": "git+https://github.com/Player1os/node-js-library.git"
   },
   "keywords": [
-    "package"
+    "library"
   ],
   "author": "Osama Hassanein <player1os@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Player1os/node-js-package/issues"
+    "url": "https://github.com/Player1os/node-js-library/issues"
   },
-  "homepage": "https://github.com/Player1os/node-js-package#readme",
+  "homepage": "https://github.com/Player1os/node-js-library#readme",
   "devDependencies": {
     "@types/bluebird-global": "^3.5.2",
     "@types/chai": "^3.5.2",
