--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,8 @@
-src/
-.babelrc
-.editorconfig
-.gitattributes
+.vscode
+coverage
+src
+test
 .gitignore
+.travis.yml
 tsconfig.json
 tslint.json
-webpack.config.js
