--- a/package.json
+++ b/package.json
@@ -1,43 +1,41 @@
 {
-  "name": "package",
-  "version": "1.0.0",
-  "description": "A base package from which other packages can be derived",
-  "main": "lib/index.js",
+  "name": "@player1os/ts-npm-package-template",
+  "version": "0.0.0",
+  "description": "A template project from which NPM packages written in Typescript can be derived",
+  "main": "build/index.js",
+  "types": "@types/index.d.ts",
   "scripts": {
-    "build": "webpack",
-    "prepublish": "npm test && npm run build",
-    "test": "mocha -r ts-node/register test/index.test.ts"
+    "preversion": "support-require @player1os/typescript-support/lib/task/preversion",
+    "postversion": "support-require @player1os/typescript-support/lib/task/postversion",
+    "update-base-create": "support-require @player1os/typescript-support/lib/task/update_base/create",
+    "update-base-load": "support-require @player1os/typescript-support/lib/task/update_base/load",
+    "build": "support-require @player1os/typescript-support/lib/task/_build",
+    "build-watch": "support-require @player1os/typescript-support/lib/task/_build/watch",
+    "test": "support-require @player1os/typescript-support/lib/task/_test",
+    "test-watch": "support-require @player1os/typescript-support/lib/task/_test/watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Player1os/node-js-package.git"
+    "url": "git+https://github.com/Player1os/ts-npm-package-template.git"
   },
   "keywords": [
-    "package"
+    "typescript",
+    "npm",
+    "package",
+    "template"
   ],
   "author": "Osama Hassanein <player1os@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Player1os/node-js-package/issues"
+    "url": "https://github.com/Player1os/ts-npm-package-template/issues"
   },
-  "homepage": "https://github.com/Player1os/node-js-package#readme",
+  "homepage": "https://github.com/Player1os/ts-npm-package-template/#readme",
+  "engines": {
+    "node": "^10.6.0",
+    "npm": "^6.1.0"
+  },
   "devDependencies": {
-    "@types/chai": "^3.5.2",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^7.0.18",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "chai": "^3.5.0",
-    "mocha": "^3.4.1",
-    "ts-loader": "^2.0.3",
-    "ts-node": "^3.0.4",
-    "tslint": "^5.2.0",
-    "tslint-config-airbnb": "^5.0.1",
-    "tsutils": "^1.9.1",
-    "typescript": "^2.3.2",
-    "webpack": "^2.5.1"
+    "@player1os/typescript-support": "^1.3.9",
+    "coveralls": "^3.0.2"
   }
 }
